# experiments

./: .gitignore  CLAUDE.md  README.md  cricket-database-plan.md  grpo-demo-gemma3-1b.ipynb  pyproject.toml
experiments/ai_model_exploration/: API_VALIDATION.md  GITHUB_SETUP.md  README.md  setup_cli.py
experiments/ai_model_exploration/chatterbox_tts/: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  cli.py  debug_chatterbox.ipynb  example.txt  requirements.txt  runpod_handler.py  sherlock_preprocessed.txt
experiments/ai_model_exploration/qwen_image_layered/: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  cli.py  pyproject.toml  requirements.txt  runpod_handler.py
experiments/ai_model_exploration/qwen_image_layered/runpod_deployments/qwen_image_layered/: Dockerfile  handler.py  requirements.txt
experiments/ai_model_exploration/qwen_image_layered/src/qwen_image_layered/: __init__.py  cli.py  client.py  config.py  runpod_manager.py
experiments/indian_health_insurance_assistant/: CLAUDE.md  README.md  cli.py
experiments/marker_exploration/: README.md  epub_to_md.py
experiments/retail_labour_demand/: 01_environment_and_data_loading.py  02_feature_engineering.py  03_forecasting.py  04_labor_conversion.py  05_productivity_calibration.py  06_diagnostics.py  07_generate_report.py  README.md  README_report.md  config.py  requirements.txt  run_all.py  run_pipeline.py
health-insurance-india/: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  FEATURES.md  PROJECT_SUMMARY.md  README.md  api.py  cli.py  docker-compose.yml  requirements.txt
health-insurance-india/agents/: insurance_agent.py  prompts.py  tools.py
health-insurance-india/collectors/: base_collector.py  care_collector.py  hdfc_collector.py  icici_collector.py  sbi_collector.py  star_collector.py
health-insurance-india/models/: database.py  schemas.py
health-insurance-india/services/: document_service.py  extraction_service.py  policy_service.py
health-insurance-india/tests/: test_api.py  test_basic.py
health-insurance-india/utils/: config.py  logger.py  pdf_utils.py
secure-runpod-chat/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
secure-runpod-chat/examples/: basic_usage.sh  file_management.md  vision_model_example.md
secure-runpod-chat/src/secure_runpod_chat/: __init__.py  __main__.py  chat_interface.py  cli.py  model_deployer.py  runpod_manager.py  ssh_client.py  utils.py
(+30 files in other folders)
