[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen-image-layered"
version = "0.1.0"
description = "A CLI tool for image layer decomposition using Qwen-Image-Layered on Runpod"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Tejas Kale" }
]
keywords = ["image-processing", "layer-decomposition", "qwen", "runpod", "ai"]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
qwen-image-layered = "qwen_image_layered.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_image_layered"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
